creusot/tests/should_fail/prusti/adt/tuple.stderr
error: function was supposed to return data with type `(&'c mut u32, &'c mut u32)` but it is returning data with type `(&'a mut u32, &'b mut u32)`
       expected `'c` found `'a`
 --> tuple.rs:7:5
  |
7 |     (x, y)
  |     ^^^^^^

error: aborting due to 1 previous error

